fix(auction): feat/auction/#110 머지 시, 발생한 에러 수정