@@ -1,26 +1,6 @@
 package com.bugzero.rarego.boundedContext.auction.app;
 
-import static org.assertj.core.api.Assertions.*;
-import static org.mockito.BDDMockito.*;
-
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.test.util.ReflectionTestUtils;
-
-import com.bugzero.rarego.boundedContext.auction.domain.Auction;
-import com.bugzero.rarego.boundedContext.auction.domain.AuctionMember;
-import com.bugzero.rarego.boundedContext.auction.domain.AuctionOrder;
-import com.bugzero.rarego.boundedContext.auction.domain.AuctionOrderStatus;
-import com.bugzero.rarego.boundedContext.auction.domain.AuctionStatus;
-import com.bugzero.rarego.boundedContext.auction.domain.Bid;
+import com.bugzero.rarego.boundedContext.auction.domain.*;
 import com.bugzero.rarego.boundedContext.auction.out.AuctionMemberRepository;
 import com.bugzero.rarego.boundedContext.auction.out.AuctionOrderRepository;
 import com.bugzero.rarego.boundedContext.auction.out.AuctionRepository;
@@ -36,10 +16,11 @@ import com.bugzero.rarego.shared.auction.dto.AuctionDetailResponseDto;
 import com.bugzero.rarego.shared.auction.dto.AuctionListResponseDto;
 import com.bugzero.rarego.shared.auction.dto.AuctionOrderResponseDto;
 import com.bugzero.rarego.shared.auction.dto.AuctionSearchCondition;
-
+import jakarta.persistence.criteria.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -58,300 +39,294 @@ import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.BDDMockito.given;
-import org.mockito.ArgumentCaptor;
-import static org.mockito.Mockito.*;
-
-import jakarta.persistence.criteria.*;
+import static org.mockito.BDDMockito.*;
 
 
 @ExtendWith(MockitoExtension.class)
 class AuctionReadUseCaseTest {
 
-	@InjectMocks
-	private AuctionReadUseCase auctionReadUseCase;
+    @InjectMocks
+    private AuctionReadUseCase auctionReadUseCase;
 
-	// [추가] 리팩토링으로 추가된 Support Mock
-	@Mock
-	private AuctionSupport support;
+    // [추가] 리팩토링으로 추가된 Support Mock
+    @Mock
+    private AuctionSupport support;
 
-	// [유지] Bulk 조회 등에 여전히 쓰이는 Mock들
-	@Mock
-	private AuctionRepository auctionRepository;
-	@Mock
-	private BidRepository bidRepository;
-	@Mock
-	private AuctionOrderRepository auctionOrderRepository;
-	@Mock
-	private ProductRepository productRepository;
-	@Mock
-	private AuctionMemberRepository auctionMemberRepository;
-	@Mock
-	private ProductImageRepository productImageRepository;
+    // [유지] Bulk 조회 등에 여전히 쓰이는 Mock들
+    @Mock
+    private AuctionRepository auctionRepository;
+    @Mock
+    private BidRepository bidRepository;
+    @Mock
+    private AuctionOrderRepository auctionOrderRepository;
+    @Mock
+    private ProductRepository productRepository;
+    @Mock
+    private AuctionMemberRepository auctionMemberRepository;
+    @Mock
+    private ProductImageRepository productImageRepository;
 
-	// --- 1. 경매 상세 조회 (getAuctionDetail) 테스트 ---
+    // --- 1. 경매 상세 조회 (getAuctionDetail) 테스트 ---
 
-	@Test
-	@DisplayName("상세 조회 - 로그인 회원(publicId 전달), 입찰 기록 있음")
-	void getAuctionDetail_member_withBid() {
-		// given
-		Long auctionId = 1L;
-		String memberPublicId = "user_pub_id_1";
-		Long memberId = 10L;
+    @Test
+    @DisplayName("상세 조회 - 로그인 회원(publicId 전달), 입찰 기록 있음")
+    void getAuctionDetail_member_withBid() {
+        // given
+        Long auctionId = 1L;
+        String memberPublicId = "user_pub_id_1";
+        Long memberId = 10L;
 
-		// 1. 회원 Mock
-		AuctionMember member = AuctionMember.builder().publicId(memberPublicId).build();
-		ReflectionTestUtils.setField(member, "id", memberId);
+        // 1. 회원 Mock
+        AuctionMember member = AuctionMember.builder().publicId(memberPublicId).build();
+        ReflectionTestUtils.setField(member, "id", memberId);
 
-		// 2. 경매 Mock
-		Auction auction = Auction.builder()
-			.productId(50L)
-			.sellerId(20L)
-			.startPrice(1000)
-			.tickSize(100)
-			.durationDays(3)
-			.endTime(LocalDateTime.now().plusDays(1))
-			.build();
-		ReflectionTestUtils.setField(auction, "id", auctionId);
-		ReflectionTestUtils.setField(auction, "currentPrice", 6000);
-		ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
+        // 2. 경매 Mock
+        Auction auction = Auction.builder()
+                .productId(50L)
+                .sellerId(20L)
+                .startPrice(1000)
+                .durationDays(3)
+                .endTime(LocalDateTime.now().plusDays(1))
+                .build();
+        ReflectionTestUtils.setField(auction, "id", auctionId);
+        ReflectionTestUtils.setField(auction, "currentPrice", 6000);
+        ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
 
-		// 3. 입찰 Mock
-		Bid highestBid = Bid.builder().bidAmount(6000).bidderId(99L).build();
-		Bid myLastBid = Bid.builder().bidAmount(5000).bidderId(memberId).build();
+        // 3. 입찰 Mock
+        Bid highestBid = Bid.builder().bidAmount(6000).bidderId(99L).build();
+        Bid myLastBid = Bid.builder().bidAmount(5000).bidderId(memberId).build();
 
-		// [변경] Repository -> Support로 Mocking 대상 변경
-		given(support.getMember(memberPublicId)).willReturn(member);
-		given(support.findAuctionById(auctionId)).willReturn(auction);
+        // [변경] Repository -> Support로 Mocking 대상 변경
+        given(support.getMember(memberPublicId)).willReturn(member);
+        given(support.findAuctionById(auctionId)).willReturn(auction);
 
-		// [유지] BidRepository는 UseCase가 직접 사용함
-		given(bidRepository.findTopByAuctionIdOrderByBidAmountDesc(auctionId)).willReturn(Optional.of(highestBid));
-		given(bidRepository.findTopByAuctionIdAndBidderIdOrderByBidAmountDesc(auctionId, memberId))
-			.willReturn(Optional.of(myLastBid));
+        // [유지] BidRepository는 UseCase가 직접 사용함
+        given(bidRepository.findTopByAuctionIdOrderByBidAmountDesc(auctionId)).willReturn(Optional.of(highestBid));
+        given(bidRepository.findTopByAuctionIdAndBidderIdOrderByBidAmountDesc(auctionId, memberId))
+                .willReturn(Optional.of(myLastBid));
 
-		// when
-		AuctionDetailResponseDto result = auctionReadUseCase.getAuctionDetail(auctionId, memberPublicId);
+        // when
+        AuctionDetailResponseDto result = auctionReadUseCase.getAuctionDetail(auctionId, memberPublicId);
 
-		// then
-		assertThat(result.myParticipation().hasBid()).isTrue();
-		assertThat(result.myParticipation().myLastBidPrice()).isEqualTo(5000);
-		assertThat(result.bid().isMyHighestBid()).isFalse();
-	}
+        // then
+        assertThat(result.myParticipation().hasBid()).isTrue();
+        assertThat(result.myParticipation().myLastBidPrice()).isEqualTo(5000);
+        assertThat(result.bid().isMyHighestBid()).isFalse();
+    }
 
-	// --- 2. 낙찰 기록 상세 조회 (getAuctionOrder) 테스트 ---
+    // --- 2. 낙찰 기록 상세 조회 (getAuctionOrder) 테스트 ---
 
-	@Test
-	@DisplayName("낙찰 상세 조회 - 낙찰자(BUYER)가 조회 시 정상 반환")
-	void getAuctionOrder_asBuyer() {
-		// given
-		Long auctionId = 1L;
-		String buyerPublicId = "buyer_pub_id";
-		Long buyerId = 10L;
-		Long sellerId = 20L;
+    @Test
+    @DisplayName("낙찰 상세 조회 - 낙찰자(BUYER)가 조회 시 정상 반환")
+    void getAuctionOrder_asBuyer() {
+        // given
+        Long auctionId = 1L;
+        String buyerPublicId = "buyer_pub_id";
+        Long buyerId = 10L;
+        Long sellerId = 20L;
 
-		// 1. 회원(구매자)
-		AuctionMember buyer = AuctionMember.builder().publicId(buyerPublicId).nickname("BuyerNick").build();
-		ReflectionTestUtils.setField(buyer, "id", buyerId);
+        // 1. 회원(구매자)
+        AuctionMember buyer = AuctionMember.builder().publicId(buyerPublicId).nickname("BuyerNick").build();
+        ReflectionTestUtils.setField(buyer, "id", buyerId);
 
-		// 2. 주문 정보
-		AuctionOrder order = AuctionOrder.builder()
-			.auctionId(auctionId)
-			.bidderId(buyerId)
-			.sellerId(sellerId)
-			.finalPrice(10000)
-			.build();
-		ReflectionTestUtils.setField(order, "id", 777L);
-		ReflectionTestUtils.setField(order, "status", AuctionOrderStatus.PROCESSING);
+        // 2. 주문 정보
+        AuctionOrder order = AuctionOrder.builder()
+                .auctionId(auctionId)
+                .bidderId(buyerId)
+                .sellerId(sellerId)
+                .finalPrice(10000)
+                .build();
+        ReflectionTestUtils.setField(order, "id", 777L);
+        ReflectionTestUtils.setField(order, "status", AuctionOrderStatus.PROCESSING);
 
-		// 3. 경매 정보
-		Auction auction = Auction.builder().productId(50L).startPrice(1000).tickSize(100).durationDays(3).build();
+        // 3. 경매 정보
+        Auction auction = Auction.builder().productId(50L).startPrice(1000).durationDays(3).build();
 
-		ReflectionTestUtils.setField(auction, "id", auctionId);
+        ReflectionTestUtils.setField(auction, "id", auctionId);
 
-		// 4. 상품 정보
-		Product product = Product.builder().sellerId(sellerId).name("Test Item").build();
-		ReflectionTestUtils.setField(product, "id", 50L);
+        // 4. 상품 정보
+        Product product = Product.builder().sellerId(sellerId).name("Test Item").build();
+        ReflectionTestUtils.setField(product, "id", 50L);
 
-		ProductImage image = ProductImage.builder().product(product).imageUrl("thumb.jpg").build();
+        ProductImage image = ProductImage.builder().product(product).imageUrl("thumb.jpg").build();
 
-		// 5. 판매자 정보
-		AuctionMember sellerMember = AuctionMember.builder().id(sellerId).publicId("seller_pub_id").nickname("sellerNick").build();
+        // 5. 판매자 정보
+        AuctionMember sellerMember = AuctionMember.builder().id(sellerId).publicId("seller_pub_id").nickname("sellerNick").build();
 
-		// [변경] Repository -> Support Mocking
-		given(support.getMember(buyerPublicId)).willReturn(buyer);   // 1. 요청자 조회
-		given(support.getOrder(auctionId)).willReturn(order);        // 2. 주문 조회
-		given(support.findAuctionById(auctionId)).willReturn(auction);    // 3. 경매 조회
-		given(support.getProduct(50L)).willReturn(product);          // 4. 상품 조회
-		given(support.getMember(sellerId)).willReturn(sellerMember); // 5. 거래상대 조회
+        // [변경] Repository -> Support Mocking
+        given(support.getMember(buyerPublicId)).willReturn(buyer);   // 1. 요청자 조회
+        given(support.getOrder(auctionId)).willReturn(order);        // 2. 주문 조회
+        given(support.findAuctionById(auctionId)).willReturn(auction);    // 3. 경매 조회
+        given(support.getProduct(50L)).willReturn(product);          // 4. 상품 조회
+        given(support.getMember(sellerId)).willReturn(sellerMember); // 5. 거래상대 조회
 
-		// [유지] ProductImage는 UseCase가 직접 조회
-		given(productImageRepository.findAllByProductId(50L)).willReturn(List.of(image));
+        // [유지] ProductImage는 UseCase가 직접 조회
+        given(productImageRepository.findAllByProductId(50L)).willReturn(List.of(image));
 
-		// when
-		AuctionOrderResponseDto result = auctionReadUseCase.getAuctionOrder(auctionId, buyerPublicId);
+        // when
+        AuctionOrderResponseDto result = auctionReadUseCase.getAuctionOrder(auctionId, buyerPublicId);
 
-		// then
-		assertThat(result.viewerRole()).isEqualTo("BUYER");
-		assertThat(result.orderId()).isEqualTo(777L);
-		assertThat(result.trader().nickname()).isEqualTo("seller_pub_id");
-	}
+        // then
+        assertThat(result.viewerRole()).isEqualTo("BUYER");
+        assertThat(result.orderId()).isEqualTo(777L);
+        assertThat(result.trader().nickname()).isEqualTo("seller_pub_id");
+    }
 
-	@Test
-	@DisplayName("낙찰 상세 조회 - 권한 없는 제3자가 조회 시 예외 발생")
-	void getAuctionOrder_forbidden() {
-		// given
-		Long auctionId = 1L;
-		String strangerPublicId = "stranger_pub_id";
-		Long strangerId = 99L;
-		Long buyerId = 10L;
-		Long sellerId = 20L;
+    @Test
+    @DisplayName("낙찰 상세 조회 - 권한 없는 제3자가 조회 시 예외 발생")
+    void getAuctionOrder_forbidden() {
+        // given
+        Long auctionId = 1L;
+        String strangerPublicId = "stranger_pub_id";
+        Long strangerId = 99L;
+        Long buyerId = 10L;
+        Long sellerId = 20L;
 
-		// 1. 제3자 회원
-		AuctionMember stranger = AuctionMember.builder().publicId(strangerPublicId).build();
-		ReflectionTestUtils.setField(stranger, "id", strangerId);
+        // 1. 제3자 회원
+        AuctionMember stranger = AuctionMember.builder().publicId(strangerPublicId).build();
+        ReflectionTestUtils.setField(stranger, "id", strangerId);
 
-		// 2. 주문
-		AuctionOrder order = AuctionOrder.builder().auctionId(auctionId).bidderId(buyerId).sellerId(sellerId).finalPrice(10000).build();
-		ReflectionTestUtils.setField(order, "id", 777L);
+        // 2. 주문
+        AuctionOrder order = AuctionOrder.builder().auctionId(auctionId).bidderId(buyerId).sellerId(sellerId).finalPrice(10000).build();
+        ReflectionTestUtils.setField(order, "id", 777L);
 
-		// 3. 경매
-		Auction auction = Auction.builder().productId(50L).startPrice(1000).tickSize(100).durationDays(3).build();
+        // 3. 경매
+        Auction auction = Auction.builder().productId(50L).startPrice(1000).durationDays(3).build();
 
-		// [변경] Support Mocking
-		given(support.getMember(strangerPublicId)).willReturn(stranger);
-		given(support.getOrder(auctionId)).willReturn(order);
-		given(support.findAuctionById(auctionId)).willReturn(auction);
+        // [변경] Support Mocking
+        given(support.getMember(strangerPublicId)).willReturn(stranger);
+        given(support.getOrder(auctionId)).willReturn(order);
+        given(support.findAuctionById(auctionId)).willReturn(auction);
 
-		// when & then
-		assertThatThrownBy(() -> auctionReadUseCase.getAuctionOrder(auctionId, strangerPublicId))
-			.isInstanceOf(CustomException.class)
-			.hasFieldOrPropertyWithValue("errorType", ErrorType.AUCTION_ORDER_ACCESS_DENIED);
-	}
+        // when & then
+        assertThatThrownBy(() -> auctionReadUseCase.getAuctionOrder(auctionId, strangerPublicId))
+                .isInstanceOf(CustomException.class)
+                .hasFieldOrPropertyWithValue("errorType", ErrorType.AUCTION_ORDER_ACCESS_DENIED);
+    }
 
-	// --- 3. 경매 목록 조회 테스트 (변경 없음, Repository 직접 사용) ---
-	@Test
-	@DisplayName("경매 목록 조회 - 썸네일 정렬(sortOrder) 및 데이터 조립 확인")
-	void getAuctions_success() {
-		// ... (기존 코드 유지)
-		// getAuctions는 아직 Repository를 직접 사용하므로 기존 코드가 정상 동작합니다.
+    // --- 3. 경매 목록 조회 테스트 (변경 없음, Repository 직접 사용) ---
+    @Test
+    @DisplayName("경매 목록 조회 - 썸네일 정렬(sortOrder) 및 데이터 조립 확인")
+    void getAuctions_success() {
+        // ... (기존 코드 유지)
+        // getAuctions는 아직 Repository를 직접 사용하므로 기존 코드가 정상 동작합니다.
 
-		// given
-		AuctionSearchCondition condition = new AuctionSearchCondition();
-		Pageable pageable = PageRequest.of(0, 10);
+        // given
+        AuctionSearchCondition condition = new AuctionSearchCondition();
+        Pageable pageable = PageRequest.of(0, 10);
 
-		Long auctionId1 = 1L;
-		Long productId1 = 100L;
-		Auction auction1 = Auction.builder()
-			.productId(productId1).startPrice(1000).tickSize(100).durationDays(3).build();
-		ReflectionTestUtils.setField(auction1, "id", auctionId1);
-		ReflectionTestUtils.setField(auction1, "currentPrice", 2000);
-		ReflectionTestUtils.setField(auction1, "status", AuctionStatus.IN_PROGRESS);
+        Long auctionId1 = 1L;
+        Long productId1 = 100L;
+        Auction auction1 = Auction.builder()
+                .productId(productId1).startPrice(1000).durationDays(3).build();
+        ReflectionTestUtils.setField(auction1, "id", auctionId1);
+        ReflectionTestUtils.setField(auction1, "currentPrice", 2000);
+        ReflectionTestUtils.setField(auction1, "status", AuctionStatus.IN_PROGRESS);
 
-		Page<Auction> auctionPage = new PageImpl<>(List.of(auction1), pageable, 1);
-		Product product1 = Product.builder().name("Test Product").build();
-		ReflectionTestUtils.setField(product1, "id", productId1);
-		List<Object[]> bidCounts = List.<Object[]>of(new Object[]{auctionId1, 5L});
+        Page<Auction> auctionPage = new PageImpl<>(List.of(auction1), pageable, 1);
+        Product product1 = Product.builder().name("Test Product").build();
+        ReflectionTestUtils.setField(product1, "id", productId1);
+        List<Object[]> bidCounts = List.<Object[]>of(new Object[]{auctionId1, 5L});
 
-		ProductImage img1 = ProductImage.builder().product(product1).imageUrl("url_2.jpg").sortOrder(2).build();
-		ProductImage img2 = ProductImage.builder().product(product1).imageUrl("url_0.jpg").sortOrder(0).build();
-		ProductImage img3 = ProductImage.builder().product(product1).imageUrl("url_1.jpg").sortOrder(1).build();
+        ProductImage img1 = ProductImage.builder().product(product1).imageUrl("url_2.jpg").sortOrder(2).build();
+        ProductImage img2 = ProductImage.builder().product(product1).imageUrl("url_0.jpg").sortOrder(0).build();
+        ProductImage img3 = ProductImage.builder().product(product1).imageUrl("url_1.jpg").sortOrder(1).build();
 
-		// Mocking Behavior (Repository 직접 사용)
-		given(auctionRepository.findAll(any(Specification.class), any(Pageable.class))).willReturn(auctionPage);
-		given(productRepository.findAllById(Set.of(productId1))).willReturn(List.of(product1));
-		given(bidRepository.countByAuctionIdIn(Set.of(auctionId1))).willReturn(bidCounts);
-		given(productImageRepository.findAllByProductIdIn(Set.of(productId1))).willReturn(List.of(img1, img2, img3));
+        // Mocking Behavior (Repository 직접 사용)
+        given(auctionRepository.findAll(any(Specification.class), any(Pageable.class))).willReturn(auctionPage);
+        given(productRepository.findAllById(Set.of(productId1))).willReturn(List.of(product1));
+        given(bidRepository.countByAuctionIdIn(Set.of(auctionId1))).willReturn(bidCounts);
+        given(productImageRepository.findAllByProductIdIn(Set.of(productId1))).willReturn(List.of(img1, img2, img3));
 
-		// when
-		PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
+        // when
+        PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
 
-		// then
-		assertThat(result.data()).hasSize(1);
-		AuctionListResponseDto dto = result.data().get(0);
-		assertThat(dto.thumbnailUrl()).isEqualTo("url_0.jpg");
-	}
+        // then
+        assertThat(result.data()).hasSize(1);
+        AuctionListResponseDto dto = result.data().get(0);
+        assertThat(dto.thumbnailUrl()).isEqualTo("url_0.jpg");
+    }
 
-	@Test
-	@DisplayName("경매 목록 조회 - 결과가 없을 때 빈 페이지 반환")
-	void getAuctions_empty() {
-		AuctionSearchCondition condition = new AuctionSearchCondition();
-		Pageable pageable = PageRequest.of(0, 10);
-		Page<Auction> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
+    @Test
+    @DisplayName("경매 목록 조회 - 결과가 없을 때 빈 페이지 반환")
+    void getAuctions_empty() {
+        AuctionSearchCondition condition = new AuctionSearchCondition();
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<Auction> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
 
-		given(auctionRepository.findAll(any(Specification.class), any(Pageable.class))).willReturn(emptyPage);
+        given(auctionRepository.findAll(any(Specification.class), any(Pageable.class))).willReturn(emptyPage);
 
-		PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
+        PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
 
-		assertThat(result.data()).isEmpty();
-		assertThat(result.pageDto().totalItems()).isEqualTo(0);
-	}
+        assertThat(result.data()).isEmpty();
+        assertThat(result.pageDto().totalItems()).isEqualTo(0);
+    }
 
-	@Test
-	@DisplayName("경매 목록 조회 - 검색 조건(키워드+상태)이 있을 때 상품 검색 후 경매 조회 수행")
-	void getAuctions_with_search_condition() {
-		// given
-		AuctionSearchCondition condition = new AuctionSearchCondition();
-		ReflectionTestUtils.setField(condition, "keyword", "Galaxy");
-		ReflectionTestUtils.setField(condition, "status", AuctionStatus.IN_PROGRESS);
+    @Test
+    @DisplayName("경매 목록 조회 - 검색 조건(키워드+상태)이 있을 때 상품 검색 후 경매 조회 수행")
+    void getAuctions_with_search_condition() {
+        // given
+        AuctionSearchCondition condition = new AuctionSearchCondition();
+        ReflectionTestUtils.setField(condition, "keyword", "Galaxy");
+        ReflectionTestUtils.setField(condition, "status", AuctionStatus.IN_PROGRESS);
 
-		Pageable pageable = PageRequest.of(0, 10);
+        Pageable pageable = PageRequest.of(0, 10);
 
-		// [Mock Setup 1] 키워드 검색 결과
-		List<Long> matchedProductIds = List.of(50L);
-		given(productRepository.findIdsBySearchCondition(eq("Galaxy"), isNull()))
-			.willReturn(matchedProductIds);
+        // [Mock Setup 1] 키워드 검색 결과
+        List<Long> matchedProductIds = List.of(50L);
+        given(productRepository.findIdsBySearchCondition(eq("Galaxy"), isNull()))
+                .willReturn(matchedProductIds);
 
-		// [Mock Setup 2] 경매 조회 결과
-		Auction auction = Auction.builder().productId(50L).startPrice(10000).durationDays(3).build();
-		ReflectionTestUtils.setField(auction, "id", 1L);
-		ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
-		Page<Auction> auctionPage = new PageImpl<>(List.of(auction), pageable, 1);
+        // [Mock Setup 2] 경매 조회 결과
+        Auction auction = Auction.builder().productId(50L).startPrice(10000).durationDays(3).build();
+        ReflectionTestUtils.setField(auction, "id", 1L);
+        ReflectionTestUtils.setField(auction, "status", AuctionStatus.IN_PROGRESS);
+        Page<Auction> auctionPage = new PageImpl<>(List.of(auction), pageable, 1);
 
-		given(auctionRepository.findAll(any(Specification.class), any(Pageable.class)))
-			.willReturn(auctionPage);
+        given(auctionRepository.findAll(any(Specification.class), any(Pageable.class)))
+                .willReturn(auctionPage);
 
-		// [Mock Setup 3] 연관 데이터 (DTO 조립용)
-		Product product = Product.builder().name("Galaxy Lego").build();
-		ReflectionTestUtils.setField(product, "id", 50L);
-		given(productRepository.findAllById(Set.of(50L))).willReturn(List.of(product));
-		given(bidRepository.countByAuctionIdIn(Set.of(1L))).willReturn(List.<Object[]>of(new Object[]{1L, 5L}));
-		given(productImageRepository.findAllByProductIdIn(Set.of(50L))).willReturn(Collections.emptyList());
+        // [Mock Setup 3] 연관 데이터 (DTO 조립용)
+        Product product = Product.builder().name("Galaxy Lego").build();
+        ReflectionTestUtils.setField(product, "id", 50L);
+        given(productRepository.findAllById(Set.of(50L))).willReturn(List.of(product));
+        given(bidRepository.countByAuctionIdIn(Set.of(1L))).willReturn(List.<Object[]>of(new Object[]{1L, 5L}));
+        given(productImageRepository.findAllByProductIdIn(Set.of(50L))).willReturn(Collections.emptyList());
 
-		// [추가] JPA Criteria 객체 Mocking (Specification 강제 실행을 위함)
-		Root<Auction> root = mock(Root.class);
-		CriteriaQuery<?> query = mock(CriteriaQuery.class);
-		CriteriaBuilder cb = mock(CriteriaBuilder.class);
-		Path<Object> path = mock(Path.class);
+        // [추가] JPA Criteria 객체 Mocking (Specification 강제 실행을 위함)
+        Root<Auction> root = mock(Root.class);
+        CriteriaQuery<?> query = mock(CriteriaQuery.class);
+        CriteriaBuilder cb = mock(CriteriaBuilder.class);
+        Path<Object> path = mock(Path.class);
 
-		// JPA 내부 호출 시 NPE 방지용 Stubbing
-		given(root.get(anyString())).willReturn(path);
-		given(path.in(anyCollection())).willReturn(mock(Predicate.class));
+        // JPA 내부 호출 시 NPE 방지용 Stubbing
+        given(root.get(anyString())).willReturn(path);
+        given(path.in(anyCollection())).willReturn(mock(Predicate.class));
 
-		// [핵심 수정 1] equal 오버로딩 문제 해결
-		// any() -> any(Object.class)로 변경하여 (Expression, Object) 메서드가 호출되도록 강제함
-		given(cb.equal(any(), any(Object.class))).willReturn(mock(Predicate.class));
+        // [핵심 수정 1] equal 오버로딩 문제 해결
+        // any() -> any(Object.class)로 변경하여 (Expression, Object) 메서드가 호출되도록 강제함
+        given(cb.equal(any(), any(Object.class))).willReturn(mock(Predicate.class));
 
-		// [핵심 수정 2] and 가변인자 문제 해결 (이전 단계에서 적용함)
-		given(cb.and(any(Predicate[].class))).willReturn(mock(Predicate.class));
+        // [핵심 수정 2] and 가변인자 문제 해결 (이전 단계에서 적용함)
+        given(cb.and(any(Predicate[].class))).willReturn(mock(Predicate.class));
 
-		// when
-		PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
+        // when
+        PagedResponseDto<AuctionListResponseDto> result = auctionReadUseCase.getAuctions(condition, pageable);
 
-		// then
-		assertThat(result.data()).hasSize(1);
-		assertThat(result.data().get(0).productName()).isEqualTo("Galaxy Lego");
+        // then
+        assertThat(result.data()).hasSize(1);
+        assertThat(result.data().get(0).productName()).isEqualTo("Galaxy Lego");
 
-		// [핵심 수정] Specification을 캡처하여 내부 로직 강제 실행
-		ArgumentCaptor<Specification<Auction>> specCaptor = ArgumentCaptor.forClass(Specification.class);
-		verify(auctionRepository).findAll(specCaptor.capture(), any(Pageable.class));
+        // [핵심 수정] Specification을 캡처하여 내부 로직 강제 실행
+        ArgumentCaptor<Specification<Auction>> specCaptor = ArgumentCaptor.forClass(Specification.class);
+        verify(auctionRepository).findAll(specCaptor.capture(), any(Pageable.class));
 
-		Specification<Auction> capturedSpec = specCaptor.getValue();
+        Specification<Auction> capturedSpec = specCaptor.getValue();
 
-		// 강제 실행! -> 이때 내부의 productRepository.findIdsBySearchCondition()이 호출됨
-		capturedSpec.toPredicate(root, query, cb);
+        // 강제 실행! -> 이때 내부의 productRepository.findIdsBySearchCondition()이 호출됨
+        capturedSpec.toPredicate(root, query, cb);
 
-		// 이제 검증하면 성공함
-		verify(productRepository).findIdsBySearchCondition(eq("Galaxy"), isNull());
-	}
+        // 이제 검증하면 성공함
+        verify(productRepository).findIdsBySearchCondition(eq("Galaxy"), isNull());
+    }
 }
